compiler/fir/analysis-tests/testData/resolve/extendedCheckers/canBeReplacedWithOperatorAssignment/logicOperators.kt
fun foo(something: Boolean) {
    var res = false
    <!ASSIGNED_VALUE_IS_NEVER_READ!>res<!> = res and something
}